<resources>
    <string name="app_name">Chess</string>
    <string name="turn_num">Turn#: 1</string>
    <string name="turn_color_w">White\'s Turn</string>
    <string name="turn_color_b">Black\'s Turn</string>
    <string name="turn_num_gen">Turn#: </string>
    <string name="ai_button_label">AI Move</string>
    <string name="undo_button_label">Undo</string>
    <string name="date_sort">Sort Games By Date</string>
    <string name="title_sort">Sort Games By Title</string>
    <string name="new_game">New Game</string>
    <string name="previous_games">Previous Games</string>
    <string name="next_move">Next Move</string>
    <string name="turn_number">Turn#: %1$d</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="white_wins">White wins!</string>
    <string name="black_wins">Black wins!</string>
    <string name="draw">Draw!</string>
    <string name="end_game_message">Game Over</string>
    <string name="save_game_message">Save game?</string>
    <string name="enter_name_message">Enter a name…</string>
    <string name="duplicate_name_message">Duplicate name already exists.</string>
    <string name="promotion_message">Pick a piece for your pawn to promote to…</string>
    <string name="check">Check</string>
    <string name="black_check">Black is in check!</string>
    <string name="white_check">White is in check!</string>
    <string name="draw_button_label">Draw</string>
    <string name="resign_button_label">Resign</string>
    <string name="draw_dialog_message">Are you sure you want to declare a draw?</string>
    <string name="resign_dialog_message">Are you sure you want to resign?</string>
</resources>
