<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/check_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/check"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@id/boardBorder"
        app:layout_constraintRight_toLeftOf="@id/boardBorder"
        app:layout_constraintTop_toBottomOf="@id/boardBorder" />

    <Button
        android:id="@+id/draw_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/draw_button_label"
        app:layout_constraintLeft_toLeftOf="@id/boardBorder"
        app:layout_constraintTop_toBottomOf="@id/boardBorder" />

    <Button
        android:id="@+id/resign_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/resign_button_label"
        app:layout_constraintRight_toRightOf="@id/boardBorder"
        app:layout_constraintTop_toBottomOf="@id/boardBorder" />

    <TextView
        android:id="@+id/turnNum"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:text="@string/turn_num"
        app:layout_constraintBottom_toTopOf="@id/turnColor"
        app:layout_constraintLeft_toLeftOf="@id/boardBorder" />

    <TextView
        android:id="@+id/turnColor"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:text="@string/turn_color_w"
        app:layout_constraintBottom_toTopOf="@id/boardBorder"
        app:layout_constraintLeft_toLeftOf="@id/boardBorder" />

    <TableLayout
        android:id="@+id/boardBorder"
        android:layout_width="362dp"
        android:layout_height="362dp"
        android:background="@drawable/border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TableLayout
        android:id="@+id/board"
        android:layout_width="360dp"
        android:layout_height="360dp"
        android:background="@drawable/chessboard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/ai_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/ai_button_label"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/boardBorder"
        app:layout_constraintRight_toRightOf="@id/boardBorder"
        app:layout_constraintLeft_toLeftOf="@id/boardBorder" />

    <Button
        android:id="@+id/undo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/undo_button_label"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/boardBorder"
        app:layout_constraintRight_toRightOf="@id/boardBorder" />

</androidx.constraintlayout.widget.ConstraintLayout>